# watchy

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  metadata.md
.cargo/: config.toml
docs/: API.md  ARCHITECTURE.md
scripts/: run-testnet.sh  test-audit.sh
src/: chains.rs  config.rs  main.rs  store.rs  wallet.rs
src/abi/: mod.rs
src/api/: handlers.rs  middleware.rs  routes.rs
src/arweave/: ans104.rs  irys.rs  mod.rs
src/audit/: consistency.rs  content.rs  endpoints.rs  engine.rs  metadata.rs  mod.rs  onchain.rs  report.rs  security.rs
src/blockchain/: mod.rs  registry.rs  reputation.rs
src/ipfs/: client.rs  mod.rs
src/services/: a2a.rs  mcp.rs  mod.rs  oasf.rs
src/types/: audit.rs  errors.rs  metadata.rs  mod.rs
